# auto_docs_editor

./: .env.SAMPLE  .gitignore  .pre-commit-config.yaml  .vale.ini  README.md  auto_docs_edit.py  bulk_pr_autodocs.py  crawl_to_markdown.py  iterative_style.py  main.py  pyproject.toml  settings.py  utils.py
archive/: all_pages.md  articles.md  capitalization.md  examples.md  future.md  headings-targets.md  product-names.md  trademarks.md  ui-elements.md
auto_docs_editor/: __init__.py  cli.py  controller.py  core.py  core_vale.py  notebook.py  tui.py  tui.tcss  widgets.py  workflow.py
crawl/: README.md  crawl_to_markdown.py
docs/: bug-analysis-vale-transition.md  testing.md
style/: 00-PERSONAL-technical-implementation.md  00-documentation-principles+.md  00-headings+.md  00-paragraph-structure+.md  00-paragraph-structure.md  00-person-and-pronouns+.md  00-prescriptive-documentation.md  00-pronouns+.md  00-pronouns.md  00-tense+.md  00-tense.md  00-timeless-documentation.md  00-tone+.md  00-tone.md  00-voice+.md  00-voice-tone-and-person+.md  00-voice.md  01-abbreviations+.md  01-headings+.md  01-inclusive-and-global+.md  01-inclusive-documentation.md  01-jargon.md  01-lists.md  01-paragraph-structure+.md  01-possessives+.md  01-sentence-structure+.md  01-sentence-structure.md  01-terminology.md  01-translation+.md  01-wordlist.md  02-anthropomorphism.md  02-cross-references.md  02-italics-terms.md  02-link-text.md  02-links-external.md  02-notices.md  02-prepositions+.md  02-procedures.md  02-tables.md  03-api-reference-comments.md  (+96 more)
tests/: conftest.py  test_context_expansion.py  test_core.py  test_core_vale.py  test_immediate_updates.py  test_notebook.py  test_reproduce_concurrency.py  test_reproduce_edit_failure.py  test_sequential_edits.py  test_tui_concurrency.py  test_tui_startup.py  test_tui_stats.py  test_ui_rejection_race.py  test_ui_thread_safety.py  test_vale_to_processing_flow.py  test_workflow.py
(+31 files in other folders)
