[project]
name = "google-style"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
exclude = [
    "archive/**",
    "incidents/**",
]

[tool.ruff.lint]
# Enable commonly useful lint rule sets.
select = ["E", "F", "I", "UP", "N", "B"]
# Silence no rules explicitly for now.
ignore = []
