[project]
name = "auto_docs_editor"
version = "0.1.0"
description = "AutoDocsEditor makes documentation conform to the Google Docs Style Guide"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
exclude = [
    "archive/**",
    "incidents/**",
]

[tool.ruff.lint]
# Enable commonly useful lint rule sets.
select = ["E", "F", "I", "UP", "N", "B"]
ignore = ["E501"]
